--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<ul class="icons">
+<!-- 
+						<ul class="icons">
 								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
@@ -174,6 +175,8 @@
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
+ADD FOOTER SOON -->
+							
 						</div>
 					</footer>
 
