--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
 
 
 
-				<!-- Footer -->
+				<!-- Footer 
 					<footer id="footer">
 						<div class="inner">
-<!-- 
+
 						<ul class="icons">
 								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
@@ -175,12 +175,14 @@
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
-ADD FOOTER SOON -->
-							
 						</div>
 					</footer>
 
 			</div>
+
+			
+-->
+
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
