--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 								<h1>Writing, Technically</h1>
 							</header>
 							<div class="content">
-								<p>A hub for student podcast series produced by students at the University </br>
-								of Florida as part of a technical writing course.</p>
+								<p>This page serves as hub for several student podcast series produced by students at </br>
+								the University of Florida as part of a technical writing course.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Podcasts</a></li>
 								</ul>
