--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><center><a href="#two" class="button next scrolly small">The Assignment</a></center></h3>
+										<h3><center><strong><a href="#two" class="button next scrolly small">The Assignment</a></strong></center></h3>
 
 									</header>
 								</article>
