--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<a href="index.html" class="logo"><strong>Writing, Technically</strong> <span>a student podcast hub</span></a>
-						<nav>
+<!--						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
-					</header>
+-->					</header>
 
 				<!-- Menu -->
 <!--
