--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
 									
 									<p>During their presentations, students noted similarities between their proposed topics and their 
 									classmates. From there, students formed small groups and developed a series of podcasts based on 
-									their proposals. Each student created an individual podcasts for the series. Groups produced Wix 
-									websites to house the podcasts. Producing podcasts has students using technical writing to make 
-									their interests accessible to a public audience. Students were given a maximum time limit of 5 
-									minutes per episode, which had them thinking carefully about craft and brevity in digital 
+									their proposals. Each student created an individual podcast for the series. Groups produced Wix 
+									websites to house their podcast seris. Producing podcasts has students using technical writing to 
+									make their interests accessible to a public audience. Students were given a maximum time limit of 
+									5 minutes per episode, which had them thinking carefully about craft and brevity in digital 
 									communication. Each group produced a series website for their podcasts, explaining the purpose 
 									and ethos of the series and how it relates to each episode.</p>
 								</div>
