--- a/index.html
+++ b/index.html
@@ -138,15 +138,17 @@
 									<header class="major">
 										<h2>About the Assignment</h2>
 									</header>
-									<p>The final assignment was developed out of several smaller assignments throughout the semester, 
-									scaffolding into the final project, a podcast. Students applied technical writing techniques to 
-									create proposals for individual podcast episodes. These proposed episodes focus an aspect of their 
+									<p>The technical writing podcast assignment had students work in groups to create an instructional, 
+									informative, and/or descriptive document in a format which is not traditionally associated with technical 
+									writing: a podcast. The final assignment was developed out of several smaller assignments throughout 
+									the semester, scaffolding into the final project, a podcast. Students applied technical writing techniques 
+									to create proposals for individual podcast episodes. These proposed episodes focus an aspect of their 
 									academic or professional interests. Working from these proposals, students then presented an 
 									elevator pitch, aimed at a popular podcast series of their choosing.</p>
 									
-									<p>During their presentations, students noted similarities between their proposed topics and their 
-									classmates. From there, students formed small groups and developed a series of podcasts based on 
-									their proposals. Each student created an individual podcast for the series. Groups produced Wix 
+									<p>During their presentations, students noted similarities between their proposed topics and those
+									of their classmates. From there, students formed small groups and developed a series of podcasts based 
+									on their proposals. Each student was responsible for an episode of the series. Groups produced Wix 
 									websites to house their podcast seris. Producing podcasts has students using technical writing to 
 									make their interests accessible to a public audience. Students were given a maximum time limit of 
 									5 minutes per episode, which had them thinking carefully about craft and brevity in digital 
