--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								</ul>
 							</div>
 							<div class="content">
-								<p>Throughout the semester, students analyze a variety of podcasts </br>
+								<p>Throughout the semester, students analyzed a variety of podcasts </br>
 								as examples of technical writing. For the final project, they applied </br>
 								course content to produce a podcast miniseries.</p>
 								<ul class="actions">
