--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 								<h1>Writing, Technically</h1>
 							</header>
 							<div class="content">
-								<p>This page serves as hub for several student podcast series produced by </br>
-								students at the University of Florida as part of a technical writing course.</p>
+								<p>This page serves as hub for podcast series produced by students </br>
+								at the University of Florida as part of a technical writing course.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Podcasts</a></li>
 								</ul>
@@ -141,9 +141,9 @@
 									<p>The technical writing podcast assignment had students work in groups to create an instructional, 
 									informative, and/or descriptive document in a format which is not traditionally associated with 
 									technical writing. The final assignment was developed out of several smaller assignments throughout 
-									the semester, scaffolding into the final project, a podcast. Students applied technical writing techniques 
-									to create proposals for individual podcast episodes. These proposed episodes focus an aspect of their 
-									academic or professional interests. Working from these proposals, students then presented an 
+									the semester, scaffolding into the final project. Students applied technical writing techniques 
+									to create proposals for individual podcast episodes. These proposed episodes focus on an aspect of 
+									their academic or professional interests. Working from these proposals, students then presented an 
 									elevator pitch, aimed at a popular podcast series.</p>
 									
 									<p>During their presentations, students noted similarities between their proposed topics and those
@@ -152,7 +152,8 @@
 									students using technical writing to make their interests accessible to a public audience. Students were 
 									given a maximum time limit of 5 minutes per episode, which had them thinking carefully about craft and 
 									brevity in digital communication. Each group produced a series website for their podcasts, explaining the 
-									purpose and ethos of the series and how it relates to each episode.</p>
+									purpose and ethos of the series and how it relates to each episode. They practiced usability testing and
+									feedback-driven revision.</p>
 								</div>
 							</section>
 
