--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link"></a>Useful Stuff You Should Know</h3>
+										<h3><a href="https://fishinfreak137.wixsite.com/usysk/podcasts" class="link"></a>Useful Stuff You Should Know</h3>
 										<p>An informative podcast</p>
 									</header>
 								</article>
