--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://fishinfreak137.wixsite.com/usysk" class="link"></a>Useful Stuff You Should Know</h3>
+										<h3><a href="https://fishinfreak137.wixsite.com/usysk" class="link" target="_blank"></a>Useful Stuff You Should Know</h3>
 										<p>An informative podcast</p>
 									</header>
 								</article>
@@ -113,7 +113,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">A Closer Look</a></h3>
+										<h3><a href="https://acloserlook.wixsite.com/thefutureisnow" class="link" target="_blank">A Closer Look</a></h3>
 										<p>The future is now</p>
 									</header>
 								</article>
