--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 								<h1>Writing, Technically</h1>
 							</header>
 							<div class="content">
-								<p>This page serves as hub for podcast series produced by students </br>
+								<p>This page serves as a hub for podcast series produced by students </br>
 								at the University of Florida as part of a technical writing course.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Podcasts</a></li>
@@ -86,7 +86,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://fishinfreak137.wixsite.com/usysk" class="link" target="_blank"></a>Useful Stuff You Should Know</h3>
+										<h3><a href="https://fishinfreak137.wixsite.com/usysk" class="link"></a>Useful Stuff You Should Know</h3>
 										<p>An informative podcast</p>
 									</header>
 								</article>
@@ -113,7 +113,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://acloserlook.wixsite.com/thefutureisnow" class="link" target="_blank">A Closer Look</a></h3>
+										<h3><a href="https://acloserlook.wixsite.com/thefutureisnow" class="link">A Closer Look</a></h3>
 										<p>The future is now</p>
 									</header>
 								</article>
