--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">FoodSolve</a></h3>
+										<h3><a href="https://jessicabui38.wixsite.com/foodsolve" class="link">FoodSolve</a></h3>
 										<p>A food awareness podcast</p>
 									</header>
 								</article>
@@ -95,7 +95,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Beyond the Lights</a></h3>
+										<h3><a href="https://currincasey.wixsite.com/beyondthelights" class="link">Beyond the Lights</a></h3>
 										<p>A university student podcast</p>
 									</header>
 								</article>
@@ -104,7 +104,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">The Daily Cognition</a></h3>
+										<h3><a href="https://clayjay93.wixsite.com/the-daily-cognition" class="link">The Daily Cognition</a></h3>
 										<p>Common sense psychology</p>
 									</header>
 								</article>
